fix linkbutton width on mobile

--- a/frontend/src/assets/sass/_hero.scss
+++ b/frontend/src/assets/sass/_hero.scss
@@ -47,7 +47,9 @@
       color: $black;
     }
   }
-  .linkButton {
-    max-width: 30%;
+  @media screen and (min-width: 992px) {
+    .linkButton {
+      max-width: 30%;
+    }
   }
 }
